fix payments button layout

--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -905,10 +905,18 @@
                                     <action selector="doneButtonTapped:" destination="Gqh-qZ-Ggc" eventType="touchUpInside" id="j1n-lr-wmI"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WOm-3h-qW0">
-                                <rect key="frame" x="117" y="307" width="87" height="37"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="footer.png" translatesAutoresizingMaskIntoConstraints="NO" id="zUY-Xx-fim">
+                                <rect key="frame" x="0.0" y="352" width="320" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WOm-3h-qW0">
+                                <rect key="frame" x="117" y="423" width="87" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.25882352939999997" green="0.62745098040000002" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="87" id="9Bq-jM-lvN"/>
+                                    <constraint firstAttribute="height" constant="37" id="ZcI-v3-7C4"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <state key="normal" title="Continue">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -922,18 +930,14 @@
                                     <action selector="saveButtonTapped:" destination="Gqh-qZ-Ggc" eventType="touchUpInside" id="PrW-s8-TwA"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="footer.png" translatesAutoresizingMaskIntoConstraints="NO" id="zUY-Xx-fim">
-                                <rect key="frame" x="0.0" y="352" width="320" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.47843137250000001" green="0.78039215689999997" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="UCA-RQ-3y6" secondAttribute="centerX" constant="-0.5" id="27F-6C-KfE"/>
-                            <constraint firstItem="jYz-Ep-B6V" firstAttribute="top" secondItem="zUY-Xx-fim" secondAttribute="bottom" id="2xe-PB-bE7"/>
                             <constraint firstItem="r4l-AW-ESE" firstAttribute="leading" secondItem="bAi-pi-fv9" secondAttribute="leading" constant="20" id="52a-IE-QRj"/>
                             <constraint firstItem="r4l-AW-ESE" firstAttribute="top" secondItem="wTC-BL-M3Z" secondAttribute="bottom" id="5a6-Bq-T4H"/>
                             <constraint firstItem="ljf-ZJ-HR7" firstAttribute="top" secondItem="1t6-SR-bJq" secondAttribute="bottom" constant="8" id="5qm-tl-2fh"/>
+                            <constraint firstAttribute="centerX" secondItem="WOm-3h-qW0" secondAttribute="centerX" constant="-0.5" id="6Bs-nP-P3a"/>
                             <constraint firstItem="jui-uf-3g3" firstAttribute="leading" secondItem="5hg-3C-t2E" secondAttribute="trailing" constant="24" id="HaE-RU-wGy"/>
                             <constraint firstItem="5hg-3C-t2E" firstAttribute="leading" secondItem="xqm-FW-WYl" secondAttribute="trailing" constant="27" id="Hak-fj-9VX"/>
                             <constraint firstItem="UCA-RQ-3y6" firstAttribute="top" secondItem="jui-uf-3g3" secondAttribute="bottom" constant="3" id="T4C-Us-C6i"/>
@@ -941,9 +945,10 @@
                             <constraint firstItem="1t6-SR-bJq" firstAttribute="leading" secondItem="bAi-pi-fv9" secondAttribute="leading" constant="20" id="Ubn-rf-xKn"/>
                             <constraint firstItem="ljf-ZJ-HR7" firstAttribute="leading" secondItem="bAi-pi-fv9" secondAttribute="leading" constant="20" id="XcK-W6-r66"/>
                             <constraint firstAttribute="trailing" secondItem="jui-uf-3g3" secondAttribute="trailing" constant="20" id="ZUy-Dp-cpK"/>
+                            <constraint firstItem="jYz-Ep-B6V" firstAttribute="top" secondItem="WOm-3h-qW0" secondAttribute="bottom" constant="20" id="dD2-f2-eKz"/>
                             <constraint firstItem="1t6-SR-bJq" firstAttribute="top" secondItem="r4l-AW-ESE" secondAttribute="bottom" constant="8" id="fqB-y9-CB6"/>
                             <constraint firstAttribute="trailing" secondItem="1t6-SR-bJq" secondAttribute="trailing" constant="20" id="h1m-Ui-zcU"/>
-                            <constraint firstItem="zUY-Xx-fim" firstAttribute="top" secondItem="WOm-3h-qW0" secondAttribute="bottom" constant="8" id="lrZ-Or-BeW"/>
+                            <constraint firstItem="jYz-Ep-B6V" firstAttribute="top" secondItem="zUY-Xx-fim" secondAttribute="bottom" id="iwT-M1-QtK"/>
                             <constraint firstAttribute="trailing" secondItem="ljf-ZJ-HR7" secondAttribute="trailing" constant="20" id="mqE-O4-R3b"/>
                             <constraint firstItem="xqm-FW-WYl" firstAttribute="leading" secondItem="bAi-pi-fv9" secondAttribute="leading" constant="20" id="phk-ex-Bcj"/>
                             <constraint firstItem="jui-uf-3g3" firstAttribute="bottom" secondItem="5hg-3C-t2E" secondAttribute="bottom" id="pwx-Ho-1NB"/>
@@ -1111,7 +1116,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="231" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="8F9D9098-7F8D-4A29-BB9D-315E1464FB75" colorSpace="pattern"/>
+                                <color key="color" patternImage="662AAB93-4585-4BC3-859D-90E2B0B03A9A" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="find-crew-wood.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="424" width="320" height="56"/>
@@ -1357,7 +1362,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                 <rect key="frame" x="142" y="221" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="18404E1D-447E-4C0C-AED9-FD1EA9271C0F" colorSpace="pattern"/>
+                                <color key="color" patternImage="829CFE4C-22A3-4CBB-BA06-659414F248D8" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="footer.png" translatesAutoresizingMaskIntoConstraints="NO" id="lra-f2-ZOm">
                                 <rect key="frame" x="0.0" y="352" width="320" height="128"/>
@@ -1592,7 +1597,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="18404E1D-447E-4C0C-AED9-FD1EA9271C0F" width="320" height="460">
+        <image name="662AAB93-4585-4BC3-859D-90E2B0B03A9A" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11479,7 +11484,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="8F9D9098-7F8D-4A29-BB9D-315E1464FB75" width="320" height="460">
+        <image name="829CFE4C-22A3-4CBB-BA06-659414F248D8" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
