--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1137,7 +1137,7 @@
                                     <outlet property="delegate" destination="gzB-dY-rge" id="6QT-DA-c6F"/>
                                 </connections>
                             </searchBar>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="RED-KU-XOZ">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="RED-KU-XOZ">
                                 <rect key="frame" x="0.0" y="136" width="320" height="292"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <connections>
@@ -1147,13 +1147,13 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="231" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="3DA9E730-B376-4348-A29F-74E213F6F03D" colorSpace="pattern"/>
+                                <color key="color" patternImage="96D8D96C-8122-4FA2-A69B-204A108681FA" colorSpace="pattern"/>
                             </activityIndicatorView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="find-crew-wood.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="find-crew-wood.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="424" width="320" height="56"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEi-k0-yGT">
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEi-k0-yGT">
                                 <rect key="frame" x="91" y="435" width="138" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.25882352941176467" green="0.62745098039215685" blue="0.66274509803921566" alpha="1" colorSpace="calibratedRGB"/>
@@ -1168,6 +1168,21 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="findCrewButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="C3A-cm-fgE"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ehv-9e-E32" userLabel="currentLocationButton">
+                                <rect key="frame" x="0.0" y="392" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="LJB-w2-Iu4"/>
+                                    <constraint firstAttribute="height" constant="30" id="kR7-Vi-O4T"/>
+                                </constraints>
+                                <state key="normal" image="currentLocation.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="currentLocationButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="efE-OB-8PW"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1186,13 +1201,16 @@
                             <constraint firstItem="OVl-W9-bgZ" firstAttribute="bottom" secondItem="kIP-Jh-lle" secondAttribute="bottom" id="Mzc-q8-cAN"/>
                             <constraint firstItem="rIt-U9-bXz" firstAttribute="leading" secondItem="VJT-lO-FNI" secondAttribute="leading" id="Oae-yE-GGA"/>
                             <constraint firstItem="RED-KU-XOZ" firstAttribute="leading" secondItem="kIP-Jh-lle" secondAttribute="leading" id="SnI-nN-eFq"/>
+                            <constraint firstAttribute="bottom" secondItem="Ehv-9e-E32" secondAttribute="bottom" constant="58" id="UCV-RX-ZFP"/>
                             <constraint firstAttribute="trailing" secondItem="bxD-02-fZW" secondAttribute="trailing" constant="3" id="VEW-cU-Afh"/>
                             <constraint firstItem="kIP-Jh-lle" firstAttribute="trailing" secondItem="3bp-9g-MYM" secondAttribute="trailing" id="WkR-58-2MF"/>
                             <constraint firstItem="WEi-k0-yGT" firstAttribute="leading" secondItem="VJT-lO-FNI" secondAttribute="leading" constant="91" id="XMa-Zr-Pay"/>
                             <constraint firstItem="WEi-k0-yGT" firstAttribute="centerX" secondItem="rIt-U9-bXz" secondAttribute="centerX" id="Xm9-iF-Mpd"/>
+                            <constraint firstItem="Ehv-9e-E32" firstAttribute="leading" secondItem="rIt-U9-bXz" secondAttribute="leading" id="cIp-oW-KN9"/>
                             <constraint firstItem="kIP-Jh-lle" firstAttribute="centerX" secondItem="7XM-fk-vcd" secondAttribute="centerX" id="cWA-qD-Gk1"/>
                             <constraint firstAttribute="bottom" secondItem="rIt-U9-bXz" secondAttribute="bottom" id="fJy-HK-0Nh"/>
                             <constraint firstItem="3bp-9g-MYM" firstAttribute="leading" secondItem="kIP-Jh-lle" secondAttribute="leading" id="ibE-Kf-lHM"/>
+                            <constraint firstItem="rIt-U9-bXz" firstAttribute="top" secondItem="Ehv-9e-E32" secondAttribute="bottom" constant="2" id="kGC-33-voV"/>
                             <constraint firstItem="1ps-7k-reJ" firstAttribute="top" secondItem="WEi-k0-yGT" secondAttribute="bottom" constant="15" id="nhZ-cu-6Z9"/>
                             <constraint firstAttribute="trailing" secondItem="OVl-W9-bgZ" secondAttribute="trailing" constant="2" id="qh3-nb-tRF"/>
                             <constraint firstItem="RED-KU-XOZ" firstAttribute="top" secondItem="OVl-W9-bgZ" secondAttribute="bottom" id="tgc-LS-vUd"/>
@@ -1406,7 +1424,7 @@
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                         <rect key="frame" x="135" y="65" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="651558D1-82E1-433F-83CD-965BA43B7404" colorSpace="pattern"/>
+                                        <color key="color" patternImage="7EC49D0F-634A-4B5E-B2C0-C81F10DA7C0B" colorSpace="pattern"/>
                                     </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.99502558297574695" blue="0.92248104749216908" alpha="1" colorSpace="calibratedRGB"/>
@@ -1696,7 +1714,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="3DA9E730-B376-4348-A29F-74E213F6F03D" width="320" height="460">
+        <image name="7EC49D0F-634A-4B5E-B2C0-C81F10DA7C0B" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11583,7 +11601,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="651558D1-82E1-433F-83CD-965BA43B7404" width="320" height="460">
+        <image name="96D8D96C-8122-4FA2-A69B-204A108681FA" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -21472,6 +21490,7 @@ AAAAAAAAAAAJCvs
         </image>
         <image name="Icon.png" width="60" height="60"/>
         <image name="credit-card.png" width="28" height="18"/>
+        <image name="currentLocation.png" width="40" height="40"/>
         <image name="find-crew-wood.png" width="320" height="55"/>
         <image name="footer.png" width="320" height="170"/>
         <image name="from-to-v2.png" width="320" height="72"/>
@@ -21489,10 +21508,10 @@ AAAAAAAAAAAJCvs
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="D7o-TK-Kff"/>
-        <segue reference="wbq-E7-Ekt"/>
-        <segue reference="ojm-M0-nu7"/>
-        <segue reference="WTk-75-MPQ"/>
+        <segue reference="R97-G3-Fuo"/>
         <segue reference="pAS-ik-Ig1"/>
+        <segue reference="nz4-w7-m9s"/>
+        <segue reference="WTk-75-MPQ"/>
+        <segue reference="ozj-xX-N4X"/>
     </inferredMetricsTieBreakers>
 </document>
