--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="PST-0O-nWs">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Reveal View Controller-->
@@ -1147,7 +1146,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="231" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="96D8D96C-8122-4FA2-A69B-204A108681FA" colorSpace="pattern"/>
+                                <color key="color" patternImage="E05AC6CF-0A42-408B-8117-C8341CA6E3F5" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="find-crew-wood.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="424" width="320" height="56"/>
@@ -1270,17 +1269,16 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UOo-wz-ltX">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                                <rect key="frame" x="0.0" y="89" width="320" height="391"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OMK-dH-4l8">
-                                <rect key="frame" x="118" y="391" width="182" height="33"/>
+                                <rect key="frame" x="118" y="427" width="182" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.25882352939999997" green="0.62745098040000002" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="OMK-dH-4l8" secondAttribute="height" multiplier="163:33" constant="19" id="AgP-zd-vRP"/>
-                                    <constraint firstAttribute="height" constant="33" id="dKE-OO-wgx"/>
-                                    <constraint firstAttribute="width" constant="182" id="qv1-VZ-dJV"/>
+                                    <constraint firstAttribute="height" constant="33" id="6Ts-EK-Y5U"/>
+                                    <constraint firstAttribute="width" constant="182" id="YqE-ih-bvQ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Got it, now lets ride >>">
@@ -1293,8 +1291,8 @@
                         </subviews>
                         <color key="backgroundColor" red="0.47843137250000001" green="0.78039215689999997" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="APb-TV-FZg" firstAttribute="top" secondItem="OMK-dH-4l8" secondAttribute="bottom" constant="56" id="Dkq-sI-JeM"/>
-                            <constraint firstAttribute="trailing" secondItem="OMK-dH-4l8" secondAttribute="trailing" constant="20" id="IRZ-Pb-jU9"/>
+                            <constraint firstAttribute="trailing" secondItem="OMK-dH-4l8" secondAttribute="trailing" constant="20" id="1A2-Zl-X1U"/>
+                            <constraint firstItem="APb-TV-FZg" firstAttribute="top" secondItem="OMK-dH-4l8" secondAttribute="bottom" constant="20" id="NUS-tB-jXI"/>
                         </constraints>
                     </view>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
@@ -1424,7 +1422,7 @@
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                         <rect key="frame" x="135" y="65" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="7EC49D0F-634A-4B5E-B2C0-C81F10DA7C0B" colorSpace="pattern"/>
+                                        <color key="color" patternImage="E20BD6F7-FC4D-4FFA-A586-7612EC7CEF75" colorSpace="pattern"/>
                                     </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.99502558297574695" blue="0.92248104749216908" alpha="1" colorSpace="calibratedRGB"/>
@@ -1714,7 +1712,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="7EC49D0F-634A-4B5E-B2C0-C81F10DA7C0B" width="320" height="460">
+        <image name="E05AC6CF-0A42-408B-8117-C8341CA6E3F5" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11601,7 +11599,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="96D8D96C-8122-4FA2-A69B-204A108681FA" width="320" height="460">
+        <image name="E20BD6F7-FC4D-4FFA-A586-7612EC7CEF75" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
