plug in new ride request background

--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1117,7 +1117,7 @@
                                 <rect key="frame" x="0.0" y="59" width="320" height="147"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="from-to-v3.png" translatesAutoresizingMaskIntoConstraints="NO" id="kIP-Jh-lle">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="from-to-v4.png" translatesAutoresizingMaskIntoConstraints="NO" id="kIP-Jh-lle">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="147"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <accessibility key="accessibilityConfiguration">
@@ -1174,11 +1174,11 @@
                                         </connections>
                                     </searchBar>
                                     <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g2W-u3-OiR" userLabel="decrease time button">
-                                        <rect key="frame" x="66" y="106" width="40" height="40"/>
+                                        <rect key="frame" x="43" y="105" width="40" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="no6-cM-Mqe"/>
-                                            <constraint firstAttribute="height" constant="40" id="tbP-Cn-SZY"/>
+                                            <constraint firstAttribute="height" constant="40" id="ZFw-Uc-9Fy"/>
+                                            <constraint firstAttribute="width" constant="40" id="zSF-ld-NAo"/>
                                         </constraints>
                                         <state key="normal" image="minus_new.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -1188,11 +1188,8 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f4-T4-Cdd" userLabel="increase time button">
-                                        <rect key="frame" x="256" y="106" width="40" height="40"/>
+                                        <rect key="frame" x="238" y="105" width="40" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="VlW-Hb-KhO"/>
-                                        </constraints>
                                         <state key="normal" image="plus_new.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -1201,7 +1198,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:00 - 10:15 pm" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bO-1R-ukM" userLabel="rideTime">
-                                        <rect key="frame" x="112" y="104" width="139" height="44"/>
+                                        <rect key="frame" x="91" y="103" width="139" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
@@ -1212,31 +1209,32 @@
                                 <constraints>
                                     <constraint firstAttribute="centerX" secondItem="0HG-3c-m8L" secondAttribute="centerX" constant="1.5" id="11K-33-69Y"/>
                                     <constraint firstItem="frw-e6-Ocr" firstAttribute="top" secondItem="7YZ-ZF-u99" secondAttribute="top" id="1vK-LL-fuu"/>
-                                    <constraint firstItem="0bO-1R-ukM" firstAttribute="top" secondItem="bxD-02-fZW" secondAttribute="bottom" constant="23" id="4Iq-M7-J3a"/>
-                                    <constraint firstItem="0bO-1R-ukM" firstAttribute="centerY" secondItem="3f4-T4-Cdd" secondAttribute="centerY" id="5Nk-8N-YLi"/>
                                     <constraint firstItem="frw-e6-Ocr" firstAttribute="leading" secondItem="kIP-Jh-lle" secondAttribute="leading" id="7jT-9u-frH"/>
                                     <constraint firstAttribute="centerY" secondItem="0HG-3c-m8L" secondAttribute="centerY" constant="57" id="9q6-Ys-4EK"/>
                                     <constraint firstItem="iyE-hO-kRY" firstAttribute="trailing" secondItem="kIP-Jh-lle" secondAttribute="trailing" id="9wl-ok-Ei8"/>
+                                    <constraint firstItem="0bO-1R-ukM" firstAttribute="centerY" secondItem="g2W-u3-OiR" secondAttribute="centerY" id="Asz-aj-S1b"/>
+                                    <constraint firstItem="3f4-T4-Cdd" firstAttribute="leading" secondItem="0bO-1R-ukM" secondAttribute="trailing" constant="8" symbolic="YES" id="DvF-q7-9Aq"/>
                                     <constraint firstItem="0HG-3c-m8L" firstAttribute="leading" secondItem="frw-e6-Ocr" secondAttribute="trailing" constant="2" id="EHk-ot-o4U"/>
                                     <constraint firstItem="bxD-02-fZW" firstAttribute="leading" secondItem="7YZ-ZF-u99" secondAttribute="leading" constant="32" id="FeJ-Ne-oRS"/>
+                                    <constraint firstAttribute="centerX" secondItem="0bO-1R-ukM" secondAttribute="centerX" constant="-0.5" id="IYA-6a-D4w"/>
+                                    <constraint firstItem="g2W-u3-OiR" firstAttribute="leading" secondItem="7YZ-ZF-u99" secondAttribute="leading" constant="43" id="Kiu-yB-0at"/>
                                     <constraint firstAttribute="trailing" secondItem="bxD-02-fZW" secondAttribute="trailing" constant="3" id="Q6m-2D-RDT"/>
                                     <constraint firstItem="bxD-02-fZW" firstAttribute="top" secondItem="0HG-3c-m8L" secondAttribute="bottom" constant="10" id="U4r-5i-WWM"/>
                                     <constraint firstAttribute="bottom" secondItem="kIP-Jh-lle" secondAttribute="bottom" id="VFt-Pj-0Ql"/>
-                                    <constraint firstItem="3f4-T4-Cdd" firstAttribute="leading" secondItem="0bO-1R-ukM" secondAttribute="trailing" constant="5" id="Xsj-6m-BTw"/>
                                     <constraint firstItem="iyE-hO-kRY" firstAttribute="leading" secondItem="0HG-3c-m8L" secondAttribute="trailing" constant="5" id="YqR-lR-Ffu"/>
-                                    <constraint firstItem="0bO-1R-ukM" firstAttribute="leading" secondItem="g2W-u3-OiR" secondAttribute="trailing" constant="6" id="ZeV-fc-UVQ"/>
-                                    <constraint firstItem="3f4-T4-Cdd" firstAttribute="bottom" secondItem="g2W-u3-OiR" secondAttribute="bottom" id="dEE-s2-2vn"/>
-                                    <constraint firstItem="3f4-T4-Cdd" firstAttribute="top" secondItem="g2W-u3-OiR" secondAttribute="top" id="efW-we-lIJ"/>
+                                    <constraint firstItem="0bO-1R-ukM" firstAttribute="bottom" secondItem="kIP-Jh-lle" secondAttribute="bottom" id="f5z-OQ-LjV"/>
                                     <constraint firstItem="0HG-3c-m8L" firstAttribute="top" secondItem="7YZ-ZF-u99" secondAttribute="top" constant="6" id="gkv-FD-xui"/>
-                                    <constraint firstItem="g2W-u3-OiR" firstAttribute="top" secondItem="bxD-02-fZW" secondAttribute="bottom" constant="25" id="guq-Yh-NNm"/>
+                                    <constraint firstAttribute="trailing" secondItem="3f4-T4-Cdd" secondAttribute="trailing" constant="42" id="has-I2-mpZ"/>
                                     <constraint firstItem="bxD-02-fZW" firstAttribute="trailing" secondItem="OVl-W9-bgZ" secondAttribute="trailing" id="iUc-GQ-B6G"/>
                                     <constraint firstAttribute="height" constant="147" id="lEo-tM-hgb"/>
                                     <constraint firstAttribute="trailing" secondItem="kIP-Jh-lle" secondAttribute="trailing" id="lQ6-vh-fqD"/>
-                                    <constraint firstAttribute="trailing" secondItem="3f4-T4-Cdd" secondAttribute="trailing" constant="24" id="mVO-ws-jdE"/>
                                     <constraint firstItem="kIP-Jh-lle" firstAttribute="leading" secondItem="7YZ-ZF-u99" secondAttribute="leading" id="mec-Su-u9k"/>
                                     <constraint firstItem="frw-e6-Ocr" firstAttribute="top" secondItem="iyE-hO-kRY" secondAttribute="top" id="oSG-XF-vsD"/>
-                                    <constraint firstItem="g2W-u3-OiR" firstAttribute="leading" secondItem="7YZ-ZF-u99" secondAttribute="leading" constant="66" id="vqk-NO-Koj"/>
+                                    <constraint firstItem="0bO-1R-ukM" firstAttribute="leading" secondItem="g2W-u3-OiR" secondAttribute="trailing" constant="8" symbolic="YES" id="q6M-aB-GF8"/>
+                                    <constraint firstItem="0bO-1R-ukM" firstAttribute="top" secondItem="bxD-02-fZW" secondAttribute="bottom" constant="22" id="uaW-YI-01x"/>
                                     <constraint firstItem="bxD-02-fZW" firstAttribute="leading" secondItem="OVl-W9-bgZ" secondAttribute="leading" id="wGe-YC-995"/>
+                                    <constraint firstAttribute="bottom" secondItem="3f4-T4-Cdd" secondAttribute="bottom" constant="2" id="x8v-xc-Cv6"/>
+                                    <constraint firstItem="0bO-1R-ukM" firstAttribute="top" secondItem="3f4-T4-Cdd" secondAttribute="top" constant="-2" id="y5U-02-gUg"/>
                                     <constraint firstItem="frw-e6-Ocr" firstAttribute="top" secondItem="kIP-Jh-lle" secondAttribute="top" id="yR9-b4-WGL"/>
                                 </constraints>
                             </view>
@@ -1250,7 +1248,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="231" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="64E4AFBB-122C-4758-97BF-41856BEFD1B0" colorSpace="pattern"/>
+                                <color key="color" patternImage="E5D0628A-1448-49FA-8AC0-1F9814C98FC0" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="find-crew-wood.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="522" width="320" height="46"/>
@@ -1488,7 +1486,7 @@
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                         <rect key="frame" x="135" y="109" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="1C3FD7BD-4ED2-4959-885C-E35885AE3CC9" colorSpace="pattern"/>
+                                        <color key="color" patternImage="681365E4-E4EF-4108-9F44-B2816631C96A" colorSpace="pattern"/>
                                     </activityIndicatorView>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ride to work tomorrow between 10:30 - 10:45 am" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="3Me-33-mwi">
                                         <rect key="frame" x="20" y="82" width="280" height="83"/>
@@ -1816,7 +1814,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="1C3FD7BD-4ED2-4959-885C-E35885AE3CC9" width="320" height="460">
+        <image name="681365E4-E4EF-4108-9F44-B2816631C96A" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11703,7 +11701,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="64E4AFBB-122C-4758-97BF-41856BEFD1B0" width="320" height="460">
+        <image name="E5D0628A-1448-49FA-8AC0-1F9814C98FC0" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -21594,7 +21592,7 @@ AAAAAAAAAAAJCvs
         <image name="credit-card.png" width="28" height="18"/>
         <image name="find-crew-wood.png" width="320" height="55"/>
         <image name="footer.png" width="320" height="170"/>
-        <image name="from-to-v3.png" width="320" height="144"/>
+        <image name="from-to-v4.png" width="320" height="144"/>
         <image name="help.png" width="22" height="22"/>
         <image name="left_new.png" width="36" height="36"/>
         <image name="minus_new.png" width="44" height="44"/>
